--- a/template/login.html
+++ b/template/login.html
@@ -23,9 +23,9 @@
 <button style='text-align:center;' type="submit" name="button" class="btn btn-primary" >Sign In</button>
 <button style='text-align:center;' type="button" name="button" class="btn btn-success" ><a style="color:white;" href="{% url 'register'%}">Register</a></button>
 
-<!-- <h3>--OR--</h3>
+					<h3>--OR--</h3>
           <a href="{% url 'social:begin' 'google-oauth2' %}"><button type="button" name="button" class="btn btn-danger">Login with Google+</button></a><br>
-					<a href="{% url 'social:begin' 'github' %}"><button type="button" name="button" class="btn btn-success">Login with GitHub</button></a><br> -->
+					<a href="{% url 'social:begin' 'github' %}"><button type="button" name="button" class="btn btn-success">Login with GitHub</button></a><br>
 
 				</form>
       </div>
