--- a/template/create_event.html
+++ b/template/create_event.html
@@ -4,6 +4,7 @@
 
 <div class="container col-md-9 content-center" style="padding-left:200px;">
   <br><br>
+  <h1><b><u>Create Your Event Here</u></b></h1><br>
   <form method='post'enctype="multipart/form-data">
 
     {% csrf_token %}
